# nomad-agent

./: .gitignore  README.md  nomad-agent.code-workspace
api/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
api/src/: config.py  main.py
api/src/agent/: graph.py  state.py
api/src/agent/nodes/: __init__.py  compiler.py  extractor.py  planner.py  researcher.py
api/src/agent/tools/: __init__.py  tavily_search.py
api/src/api/: dependencies.py  middleware.py  router.py
api/src/models/: events.py  request.py  response.py
api/src/services/: generation.py  generation_stream.py
api/tests/: conftest.py  test_api.py
api/tests/test_agent/: test_compiler.py  test_event_buffer.py  test_extractor.py  test_planner.py  test_researcher.py  test_tavily_search.py
api/tests/test_models/: test_events.py  test_response_models.py
api/tests/test_services/: test_generation.py  test_generation_stream_delta.py
app/: .env.example  pubspec.yaml  test_output.txt  test_output2.txt
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/core/constants/: app_spacing.dart
app/lib/core/models/: cached_itinerary_summary.dart  itinerary.dart  sse_event.dart  venue.dart
app/lib/core/network/: api_client.dart  api_interceptor.dart  sse_parser.dart
app/lib/core/router/: app_router.dart
app/lib/core/storage/: itinerary_cache.dart  onboarding_flag_store.dart
app/lib/core/theme/: app_colors.dart  app_theme.dart  app_typography.dart
app/test/: app_test.dart
docs/: pipeline_analysis.md
(+40 files in other folders)
